--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "todo-list-v1",
+  "homepage": "https://sainivishu.github.io/ToDo_List",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,8 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
